# course_work_4

./: README.md  REAMDE.md  pyproject.toml
config/: settings.py  urls.py
newapp/: admin.py  forms.py  models.py  urls.py  views.py
newapp/migrations/: 0001_initial.py  0002_mailingrecipient_owner_newsletter_owner_and_more.py  0003_mailingattempt_owner_message_owner.py  0004_mailingattempt_newsletter_alter_mailingattempt_owner_and_more.py  0005_alter_mailingattempt_options_and_more.py  0006_alter_mailingattempt_options_and_more.py  0007_alter_usermailingstatistics_failed_mailings_and_more.py  0008_alter_mailingrecipient_options.py  0009_newsletter_success.py
newapp/templates/newapp/: base.html  home.html  mailing_attempt_list.html  message_list.html  user_statistics.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customsuser_token.py  0003_alter_customsuser_options_customsuser_country_and_more.py  0004_alter_customsuser_avatar.py
